Diplom_3 v1.0